Fix content overflow

--- a/src/components/Navigation/PrimaryNavigation/PrimaryNavigation.scss
+++ b/src/components/Navigation/PrimaryNavigation/PrimaryNavigation.scss
@@ -87,6 +87,7 @@ $slider-width: 264px;
   flex-grow: 1;
   height: 100%;
   flex-direction: column;
+  overflow-x: scroll;
 }
 
 .loadingBucket {
